# PapoSocialAI

./: config.py  crew.py  main.py  pasted_text_1726487312930.txt  pasted_text_1726488748361.txt  pasted_text_1726488991669.txt  pyproject.toml  requirements.txt
agents/: content_architect.py
app/: __init__.py  auth.py  models.py  routes.py
app/ai/: content_curator.py  coordinator.py  research_analyst.py  strategic_planner.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: article.html  base.html  dashboard.html  index.html  login.html
config/: agents.yaml  process.yaml  tasks.yaml
monitoring/: dashboard.py
tasks/: content_creation.py  content_curation.py  create_content_strategy.py  research_trends.py
tools/: continuous_monitoring_tool.py  data_analysis_tool.py  interactive_content_creation_tool.py  research_tools.py  seo_tool.py  trend_forecasting_tool.py
