[tool.poetry]
name = "repl-nix-paposocialencyclopediaai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
flask = "^2.0.1"
flask-sqlalchemy = "^3.0.0"
flask-restful = "^0.3.9"
celery = "^5.2.7"
crewai = "^0.55.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
